fix: mobile David shifted right (right: 2%)

--- a/src/index.css
+++ b/src/index.css
@@ -1830,7 +1830,7 @@ body{
   .lp-hero-david {
     display: flex;
     width: 95vw;
-    right: -8%;
+    right: 2%;
     top: 8%;
     bottom: auto;
     height: 78%;
